@@ -1,167 +1,252 @@
-package com.unqiuehire.kashflow.serviceimpl;
-
+package com.unqiuehire.kashflow.serviceImpl;
 import com.unqiuehire.kashflow.constant.ApiStatus;
 import com.unqiuehire.kashflow.constant.ApplicationStatus;
-import com.unqiuehire.kashflow.constant.LoanPlanStatus;
+import com.unqiuehire.kashflow.dto.requestdto.LoanApplicationApprovalRequestDto;
 import com.unqiuehire.kashflow.dto.requestdto.LoanApplicationRequestDto;
 import com.unqiuehire.kashflow.dto.responsedto.ApiResponse;
 import com.unqiuehire.kashflow.dto.responsedto.LoanApplicationResponseDto;
 import com.unqiuehire.kashflow.entity.Borrower;
+import com.unqiuehire.kashflow.entity.Lender;
 import com.unqiuehire.kashflow.entity.LoanApplication;
 import com.unqiuehire.kashflow.entity.LoanPlan;
-import com.unqiuehire.kashflow.exception.ResourceNotFoundException;
 import com.unqiuehire.kashflow.repository.BorrowerRepository;
+import com.unqiuehire.kashflow.repository.LenderRepository;
 import com.unqiuehire.kashflow.repository.LoanApplicationRepository;
 import com.unqiuehire.kashflow.repository.LoanPlanRepository;
 import com.unqiuehire.kashflow.service.LoanApplicationService;
-import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.Period;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class LoanApplicationServiceImpl implements LoanApplicationService {
 
-    private final LoanApplicationRepository repository;
-    private final LoanPlanRepository loanPlanRepository;
-    private final BorrowerRepository borrowerRepository;
+    @Autowired
+    private LoanApplicationRepository loanApplicationRepository;
+
+    @Autowired
+    private LoanPlanRepository loanPlanRepository;
+
+    @Autowired
+    private BorrowerRepository borrowerRepository;
+    @Autowired
+    private LenderRepository lenderRepository;
 
     @Override
-    public ApiResponse<LoanApplicationResponseDto> createApplication(LoanApplicationRequestDto dto) {
+    public ApiResponse<LoanApplicationResponseDto> applyLoan(Long borrowerId, Long lenderId,Long planId, LoanApplicationRequestDto requestDto) {
 
-        if (dto == null) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Loan application request cannot be null", null);
+        Optional<Borrower> borrowerOptional = borrowerRepository.findById(borrowerId);
+        if (borrowerOptional.isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower not found", null);
         }
 
-        if (dto.getBorrowerId() == null) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower id is required", null);
+        Optional<Lender> lenderOptional = lenderRepository.findById(lenderId);
+        if (lenderOptional.isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Lender not found", null);
         }
 
-        if (dto.getPlanId() == null) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Plan id is required", null);
+        Optional<LoanPlan> planOptional = loanPlanRepository.findById(planId);
+        if (planOptional.isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan plan not found", null);
         }
 
-        if (dto.getLoanAmount() == null || dto.getLoanAmount() <= 0) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Loan amount must be greater than 0", null);
+        Borrower borrower = borrowerOptional.get();
+        Lender lender = lenderOptional.get();
+        LoanPlan loanPlan = planOptional.get();
+
+        // Lender validation
+        if (!loanPlan.getLender().getLenderId().equals(lenderId)) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Lender mismatch with loan plan", null);
         }
 
-        Borrower borrower = borrowerRepository.findById(dto.getBorrowerId())
-                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
-
-        LoanPlan plan = loanPlanRepository.findById(dto.getPlanId())
-                .orElseThrow(() -> new ResourceNotFoundException("Loan Plan not found"));
-
-        if (Boolean.FALSE.equals(borrower.getIsActive())) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Inactive borrower cannot apply for loan", null);
+        // Collateral required
+        if (requestDto.getCollateral() == null || requestDto.getCollateral().trim().isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Collateral is required", null);
         }
 
-        if (plan.getStatus() != LoanPlanStatus.ACTIVE) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "This loan plan is not active", null);
+        //If educated → certificates required
+        if (Boolean.TRUE.equals(requestDto.getIsEducated())) {
+            if (requestDto.getCertificates() == null || requestDto.getCertificates().trim().isEmpty()) {
+                return new ApiResponse<>(ApiStatus.FAILURE, "Certificates required for educated borrower", null);
+            }
         }
 
-        if (dto.getLoanAmount() > plan.getAmount()) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Requested loan amount exceeds loan plan amount", null);
+        // Age validation
+        if (loanPlan.getMinAge() == null || loanPlan.getMaxAge() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan plan age not configured", null);
         }
 
-        if (borrower.getCibil() == null) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower CIBIL is missing", null);
+        if (requestDto.getAge() < loanPlan.getMinAge() || requestDto.getAge() > loanPlan.getMaxAge()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Age not eligible", null);
         }
 
-        if (borrower.getCibil() < plan.getMinCibil()) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower does not meet minimum CIBIL for this plan", null);
+        // Income validation
+        if (requestDto.getMonthlyIncome() < loanPlan.getMinMonthlyIncome()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Income too low", null);
         }
 
-        boolean alreadyPending = repository.existsByBorrower_BorrowerIdAndLoanPlan_IdAndStatus(
-                borrower.getBorrowerId(),
-                plan.getId(),
-                ApplicationStatus.PENDING
-        );
-
-        if (alreadyPending) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Borrower already has a pending application for this plan", null);
+        // CIBIL
+        if (borrower.getCibil() < loanPlan.getMinCibil()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "CIBIL not eligible", null);
         }
 
-        LoanApplication app = new LoanApplication();
-        app.setBorrower(borrower);
-        app.setLoanPlan(plan);
-        app.setLoanAmount(dto.getLoanAmount());
-        app.setStatus(ApplicationStatus.PENDING);
-        app.setIsLoanCreated(false);
+        //PinCode validation
+        if (!requestDto.getPinCode().equals(loanPlan.getServicePinCode())) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Service area mismatch", null);
+        }
 
-        LoanApplication saved = repository.save(app);
+        // Create Application
+        LoanApplication application = new LoanApplication();
+        application.setBorrower(borrower);
+        application.setLender(lender);
+        application.setLoanPlan(loanPlan);
+        application.setLoanAmount(requestDto.getLoanAmount());
+        application.setAge(requestDto.getAge());
+        application.setMonthlyIncome(requestDto.getMonthlyIncome());
+        application.setEmploymentType(requestDto.getEmployeeType());
+        application.setPinCode(requestDto.getPinCode());
+        application.setIsEducated(requestDto.getIsEducated());
+        application.setCertificates(requestDto.getCertificates());
+        application.setCollateral(requestDto.getCollateral());
+        application.setStatus(ApplicationStatus.PENDING);
+        application.setAppliedAt(LocalDateTime.now());
+
+        LoanApplication saved = loanApplicationRepository.save(application);
 
         return new ApiResponse<>(
                 ApiStatus.SUCCESS,
-                "Loan application created successfully",
-                mapToDto(saved)
+                "Loan applied successfully",
+                mapToResponse(saved)
         );
     }
 
     @Override
-    public ApiResponse<LoanApplicationResponseDto> getById(Long id) {
-        LoanApplication app = repository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
+    public ApiResponse<LoanApplicationResponseDto> updateLoanDecision(
+            Long applicationId,
+            Long lenderId,
+            LoanApplicationApprovalRequestDto requestDto) {
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Loan application fetched successfully", mapToDto(app));
+        Optional<LoanApplication> optional = loanApplicationRepository.findById(applicationId);
+
+        if (optional.isEmpty()) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Loan application not found", null);
+        }
+
+        LoanApplication application = optional.get();
+
+        // LENDER VALIDATION
+        if (!application.getLender().getLenderId().equals(lenderId)) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Unauthorized: Lender mismatch", null);
+        }
+
+        // STATUS VALIDATION
+        if (requestDto.getApplicationStatus() == null) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Application status is required", null);
+        }
+
+        // ALREADY PROCESSED CHECK
+        if (application.getStatus() != ApplicationStatus.PENDING) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Application already processed", null);
+        }
+
+        if (requestDto.getApplicationStatus() == ApplicationStatus.PENDING) {
+            return new ApiResponse<>(ApiStatus.FAILURE, "Cannot set status back to PENDING", null);
+        }
+
+        // UPDATE STATUS
+        application.setStatus(requestDto.getApplicationStatus());
+
+        // SAVE REMARKS
+        if (requestDto.getRemarks() != null) {
+            application.setRejectionReason(requestDto.getRemarks());
+        }
+
+        application.setUpdatedAt(java.time.LocalDateTime.now());
+
+        LoanApplication updated = loanApplicationRepository.save(application);
+
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Loan application decision updated successfully",
+                mapToResponse(updated)
+        );
     }
 
     @Override
-    public ApiResponse<List<LoanApplicationResponseDto>> getByBorrower(Long borrowerId) {
-        List<LoanApplicationResponseDto> list = repository.findByBorrower_BorrowerId(borrowerId)
+    public ApiResponse<LoanApplicationResponseDto> getApplicationById(Long applicationId) {
+
+        Optional<LoanApplication> optional = loanApplicationRepository.findById(applicationId);
+
+        if (optional.isEmpty()) {
+            return new ApiResponse<>(
+                    ApiStatus.FAILURE,
+                    "Loan application not found",
+                    null
+            );
+        }
+
+        LoanApplication application = optional.get();
+
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Loan application fetched successfully",
+                mapToResponse(application)
+        );
+    }
+    @Override
+    public ApiResponse<List<LoanApplicationResponseDto>> getApplicationsByLenderId(Long lenderId) {
+
+        List<LoanApplicationResponseDto> list = loanApplicationRepository
+                .findByLender_LenderId(lenderId)
                 .stream()
-                .map(this::mapToDto)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Borrower loan applications fetched successfully", list);
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Lender applications fetched successfully",
+                list
+        );
     }
-
     @Override
-    public ApiResponse<List<LoanApplicationResponseDto>> getByLender(Long lenderId) {
-        List<LoanApplicationResponseDto> list = repository.findByLoanPlan_Lender_LenderId(lenderId)
+    public ApiResponse<List<LoanApplicationResponseDto>> getApplicationsByBorrowerId(Long borrowerId) {
+
+        List<LoanApplicationResponseDto> list = loanApplicationRepository
+                .findByBorrower_BorrowerId(borrowerId)
                 .stream()
-                .map(this::mapToDto)
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
 
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Lender loan applications fetched successfully", list);
+        return new ApiResponse<>(
+                ApiStatus.SUCCESS,
+                "Borrower applications fetched successfully",
+                list
+        );
     }
-
-    @Override
-    public ApiResponse<String> cancelApplication(Long id) {
-        LoanApplication app = repository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Application not found"));
-
-        if (app.getStatus() == ApplicationStatus.APPROVED) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Approved application cannot be cancelled", null);
-        }
-
-        if (app.getStatus() == ApplicationStatus.REJECTED) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Rejected application cannot be cancelled", null);
-        }
-
-        if (app.getStatus() == ApplicationStatus.CANCELLED) {
-            return new ApiResponse<>(ApiStatus.FAILURE, "Application is already cancelled", null);
-        }
-
-        app.setStatus(ApplicationStatus.CANCELLED);
-        repository.save(app);
-
-        return new ApiResponse<>(ApiStatus.SUCCESS, "Loan application cancelled successfully", "ID: " + id);
-    }
-
-    private LoanApplicationResponseDto mapToDto(LoanApplication app) {
+//
+    private LoanApplicationResponseDto mapToResponse(LoanApplication application) {
         LoanApplicationResponseDto dto = new LoanApplicationResponseDto();
-
-        dto.setApplicationId(app.getApplicationId());
-        dto.setBorrowerId(app.getBorrower().getBorrowerId());
-        dto.setPlanId(app.getLoanPlan().getId());
-        dto.setLenderId(app.getLoanPlan().getLender().getLenderId());
-        dto.setLoanAmount(app.getLoanAmount());
-        dto.setStatus(app.getStatus().name());
-        dto.setApplicationDate(app.getApplicationDate() != null ? app.getApplicationDate().toString() : null);
-        dto.setRejectionReason(app.getRejectionReason());
-        dto.setIsLoanCreated(app.getIsLoanCreated());
-
+        dto.setApplicationId(application.getApplicationId());
+        dto.setBorrowerId(application.getBorrower().getBorrowerId());
+        dto.setLenderId(application.getLender().getLenderId());
+        dto.setPlanId(application.getLoanPlan().getId());
+        dto.setLoanAmount(application.getLoanAmount());
+        dto.setAge(application.getAge());
+        dto.setMonthlyIncome(application.getMonthlyIncome());
+        dto.setEmployeeType(application.getEmploymentType());
+        dto.setPinCode(application.getPinCode());
+        dto.setIsEducated(application.getIsEducated());
+        dto.setCertificates(application.getCertificates());
+        dto.setCollateral(application.getCollateral());
+        dto.setApplicationStatus(application.getStatus());
+//        dto.setRemarks(application.get);
+        dto.setAppliedAt(application.getAppliedAt());
         return dto;
     }
 }
